[gd_scene load_steps=9 format=3 uid="uid://c8c8588ll3dgi"]

[ext_resource type="Script" uid="uid://btlb4dx3c73tx" path="res://actors/player/ui/UIManager.gd" id="1_j821m"]
[ext_resource type="Texture2D" uid="uid://b7xgg3xttqsmk" path="res://assets/sprites/Square.png" id="2_tgcjh"]
[ext_resource type="Shader" uid="uid://b35cd6hsygheh" path="res://actors/player/ui/Cooldown.gdshader" id="3_c7hbm"]
[ext_resource type="Script" uid="uid://bxq1w28him5nj" path="res://actors/player/ui/LevelUpPopup.gd" id="4_ipho1"]
[ext_resource type="Script" uid="uid://b0k1ncuv16fej" path="res://actors/player/ui/ItemHelper.gd" id="5_c7hbm"]
[ext_resource type="Script" uid="uid://dave3oy2wtguc" path="res://actors/player/ui/PauseMenu.gd" id="5_tgcjh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sbmte"]
shader = ExtResource("3_c7hbm")
shader_parameter/fill_amount = 0.0
shader_parameter/fill_color = Color(0, 0, 0, 0.65)
shader_parameter/bg_color = Color(0, 0, 0, 0.25)
shader_parameter/clockwise = true
shader_parameter/start_angle = -1.5708

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k1284"]
shader = ExtResource("3_c7hbm")
shader_parameter/fill_amount = 0.0
shader_parameter/fill_color = Color(0, 0, 0, 0.65)
shader_parameter/bg_color = Color(0, 0, 0, 0.25)
shader_parameter/clockwise = true
shader_parameter/start_angle = -1.5708

[node name="UiManager" type="CanvasLayer"]
script = ExtResource("1_j821m")

[node name="Skills" type="GridContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -58.0
offset_right = 78.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Skill1" type="TextureRect" parent="Skills"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Cooldown" type="TextureRect" parent="Skills/Skill1"]
visible = false
material = SubResource("ShaderMaterial_sbmte")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Skill2" type="TextureRect" parent="Skills"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Cooldown" type="TextureRect" parent="Skills/Skill2"]
visible = false
material = SubResource("ShaderMaterial_k1284")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Skill3" type="TextureRect" parent="Skills"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Cooldown" type="TextureRect" parent="Skills/Skill3"]
visible = false
material = SubResource("ShaderMaterial_sbmte")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Skill4" type="TextureRect" parent="Skills"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Cooldown" type="TextureRect" parent="Skills/Skill4"]
visible = false
material = SubResource("ShaderMaterial_sbmte")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Timer" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2

[node name="LevelUp" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_ipho1")

[node name="ColorRect" type="ColorRect" parent="LevelUp"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.1882353)

[node name="Choice1" type="Button" parent="LevelUp/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.0
offset_top = -199.0
offset_right = -170.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="LevelUp/ColorRect/Choice1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 190.0
grow_horizontal = 2
texture = ExtResource("2_tgcjh")

[node name="Name" type="Label" parent="LevelUp/ColorRect/Choice1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -5.0
offset_right = 90.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Description" type="Label" parent="LevelUp/ColorRect/Choice1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 30.0
offset_right = 90.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.68307686, 0.6830775, 0.68307734, 0.91764706)
horizontal_alignment = 1
autowrap_mode = 3

[node name="Choice2" type="Button" parent="LevelUp/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -199.0
offset_right = 100.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="LevelUp/ColorRect/Choice2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 190.0
grow_horizontal = 2
texture = ExtResource("2_tgcjh")

[node name="Name" type="Label" parent="LevelUp/ColorRect/Choice2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -5.0
offset_right = 90.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Description" type="Label" parent="LevelUp/ColorRect/Choice2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 30.0
offset_right = 90.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.68235296, 0.68235296, 0.68235296, 0.91764706)
horizontal_alignment = 1
autowrap_mode = 3

[node name="Choice3" type="Button" parent="LevelUp/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = -199.0
offset_right = 370.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="LevelUp/ColorRect/Choice3"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 190.0
grow_horizontal = 2
texture = ExtResource("2_tgcjh")

[node name="Name" type="Label" parent="LevelUp/ColorRect/Choice3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -5.0
offset_right = 90.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Description" type="Label" parent="LevelUp/ColorRect/Choice3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 30.0
offset_right = 90.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.68235296, 0.68235296, 0.68235296, 0.91764706)
horizontal_alignment = 1
autowrap_mode = 3

[node name="Items" type="GridContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 50.0
columns = 3

[node name="Item1" type="Control" parent="Items"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_c7hbm")

[node name="Icon" type="TextureRect" parent="Items/Item1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Level" type="BoxContainer" parent="Items/Item1"]
layout_mode = 0
offset_top = 43.0
offset_right = 52.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="Pip1" type="TextureRect" parent="Items/Item1/Level"]
visible = false
modulate = Color(0.88281494, 0.81220865, 0.5004415, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 3

[node name="Pip2" type="TextureRect" parent="Items/Item1/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip3" type="TextureRect" parent="Items/Item1/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip4" type="TextureRect" parent="Items/Item1/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Item2" type="Control" parent="Items"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_c7hbm")

[node name="Icon" type="TextureRect" parent="Items/Item2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Level" type="BoxContainer" parent="Items/Item2"]
layout_mode = 0
offset_top = 43.0
offset_right = 52.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="Pip1" type="TextureRect" parent="Items/Item2/Level"]
visible = false
modulate = Color(0.88281494, 0.81220865, 0.5004415, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 3

[node name="Pip2" type="TextureRect" parent="Items/Item2/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip3" type="TextureRect" parent="Items/Item2/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip4" type="TextureRect" parent="Items/Item2/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Item3" type="Control" parent="Items"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_c7hbm")

[node name="Icon" type="TextureRect" parent="Items/Item3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Level" type="BoxContainer" parent="Items/Item3"]
layout_mode = 0
offset_top = 43.0
offset_right = 52.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="Pip1" type="TextureRect" parent="Items/Item3/Level"]
visible = false
modulate = Color(0.88281494, 0.81220865, 0.5004415, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 3

[node name="Pip2" type="TextureRect" parent="Items/Item3/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip3" type="TextureRect" parent="Items/Item3/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip4" type="TextureRect" parent="Items/Item3/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Passives" type="GridContainer" parent="."]
offset_left = 10.0
offset_top = 70.0
offset_right = 140.0
offset_bottom = 110.0
columns = 3

[node name="Item1" type="Control" parent="Passives"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_c7hbm")

[node name="Icon" type="TextureRect" parent="Passives/Item1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Level" type="BoxContainer" parent="Passives/Item1"]
layout_mode = 0
offset_top = 43.0
offset_right = 52.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="Pip1" type="TextureRect" parent="Passives/Item1/Level"]
visible = false
modulate = Color(0.88281494, 0.81220865, 0.5004415, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 3

[node name="Pip2" type="TextureRect" parent="Passives/Item1/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip3" type="TextureRect" parent="Passives/Item1/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip4" type="TextureRect" parent="Passives/Item1/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Item2" type="Control" parent="Passives"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_c7hbm")

[node name="Icon" type="TextureRect" parent="Passives/Item2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Level" type="BoxContainer" parent="Passives/Item2"]
layout_mode = 0
offset_top = 43.0
offset_right = 52.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="Pip1" type="TextureRect" parent="Passives/Item2/Level"]
visible = false
modulate = Color(0.88281494, 0.81220865, 0.5004415, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 3

[node name="Pip2" type="TextureRect" parent="Passives/Item2/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip3" type="TextureRect" parent="Passives/Item2/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip4" type="TextureRect" parent="Passives/Item2/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Item3" type="Control" parent="Passives"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_c7hbm")

[node name="Icon" type="TextureRect" parent="Passives/Item3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Level" type="BoxContainer" parent="Passives/Item3"]
layout_mode = 0
offset_top = 43.0
offset_right = 52.0
offset_bottom = 53.0
theme_override_constants/separation = 0

[node name="Pip1" type="TextureRect" parent="Passives/Item3/Level"]
visible = false
modulate = Color(0.88281494, 0.81220865, 0.5004415, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 3

[node name="Pip2" type="TextureRect" parent="Passives/Item3/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip3" type="TextureRect" parent="Passives/Item3/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="Pip4" type="TextureRect" parent="Passives/Item3/Level"]
visible = false
modulate = Color(0.88235295, 0.8117647, 0.5019608, 1)
layout_mode = 2
texture = ExtResource("2_tgcjh")
expand_mode = 2

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_tgcjh")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.1882353)

[node name="Resume" type="Button" parent="PauseMenu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.359985
offset_top = -120.83
offset_right = 54.080017
offset_bottom = -89.83
grow_horizontal = 2
grow_vertical = 2
text = "Resume"
